# kaguya

./: Cargo.toml  README.md
.agents/skills/kaguya-benchmark/: SKILL.md
assets/icon/: update.sh
assets/macos/Kaguya.app/Contents/: Info.plist
ci/: deploy.sh  generate-workflows.py
config/: Cargo.toml
config/src/: config.rs
env-bootstrap/: Cargo.toml
filedescriptor/: Cargo.toml
lua-api-crates/spawn-funcs/: Cargo.toml
mux/: Cargo.toml
nix/: flake.nix
procinfo/: Cargo.toml
procinfo/src/: lib.rs
pty/: Cargo.toml
termwiz/: Cargo.toml
wezterm/: Cargo.toml
wezterm-client/: Cargo.toml
wezterm-font/: Cargo.toml
wezterm-font/src/: parser.rs
wezterm-font/src/locator/: gdi.rs  mod.rs
wezterm-gui/: Cargo.toml  build.rs
wezterm-gui/src/: main.rs
wezterm-mux-server/: Cargo.toml
wezterm-mux-server-impl/: Cargo.toml
wezterm-open-url/: Cargo.toml
wezterm-toast-notification/: Cargo.toml
wezterm-toast-notification/src/: lib.rs
wezterm-uds/: Cargo.toml
wezterm/src/: main.rs
window/: Cargo.toml
