[package]
name = "portable-pty"
version = "0.9.0"
authors = ["Wez Furlong"]
edition = "2018"
repository = "https://github.com/wezterm/wezterm"
description = "Cross platform pty interface"
license = "MIT"
documentation = "https://docs.rs/portable-pty"

[dependencies]
anyhow.workspace = true
downcast-rs.workspace = true
filedescriptor.workspace = true
libc.workspace = true
log.workspace = true
nix = {workspace=true, features=["term", "fs"]}
serde = {workspace=true, optional=true, features=["derive"]}
serial2.workspace = true
shell-words.workspace = true

[features]
default = []
serde_support = ["serde"]

[dev-dependencies]
futures.workspace = true
smol.workspace = true
